<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tx_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:text="@string/email" />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/et_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:id="@+id/tx_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:text="@string/password" />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/et_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:id="@+id/tx_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:text="@string/username" />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/et_username_layout"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:id="@+id/tx_car_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:text="@string/car_category" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/carousel_layout">
            <Button
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:id="@+id/type_back"
                android:gravity="start"
                android:layout_alignParentLeft="true"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ic_keyboard_arrow_left_black_24dp"
                android:layout_alignParentStart="true" />
        <com.gtomato.android.ui.widget.CarouselView
            android:id="@+id/carousel"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@id/type_front"
            android:layout_toRightOf="@id/type_back"
            android:layout_toStartOf="@id/type_front"
            android:layout_toEndOf="@id/type_back" />
            <Button
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:id="@+id/type_front"
                android:gravity="end"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ic_keyboard_arrow_right_black_24dp"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
            <!--<Spinner-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/car_category"-->
                <!--android:layout_marginRight="25dp"-->
                <!--android:layout_marginLeft="25dp"-->
                <!--/>-->
        <!--<android.support.design.widget.TextInputLayout-->
            <!--android:id="@+id/et_car_category_layout"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginRight="25dp"-->
            <!--android:layout_marginLeft="25dp">-->

            <!--<android.support.design.widget.TextInputEditText-->
                <!--android:id="@+id/et_car_category"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textSize="14sp" />-->
        <!--</android.support.design.widget.TextInputLayout>-->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sign_up_button"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="Sign Up"
            />

    <TextView
        android:id="@+id/already_have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/already_have_an_account_sign_in_here"
        android:textSize="12sp"
        android:layout_marginTop="15dp"
        android:textColorHighlight="@color/white"
        android:visibility="visible"
        android:layout_marginBottom="15dp"
        />
    </LinearLayout>
    </RelativeLayout>
</RelativeLayout>


