<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <ImageView
        android:id="@+id/profile_img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher" />
    <TextView
        android:id="@+id/tx_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/email" />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/et_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:id="@+id/tx_car_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/car_category" />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/car_category_spinner"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp" />
    <!--<TextView-->
    <!--android:id="@+id/tx_username"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginBottom="14dp"-->
    <!--android:layout_marginLeft="25dp"-->
    <!--android:layout_marginStart="25dp"-->
    <!--android:text="@string/username" />-->
    <!--<android.support.design.widget.TextInputLayout-->
    <!--android:id="@+id/et_username_layout"-->
    <!--android:layout_marginRight="25dp"-->
    <!--android:layout_marginLeft="25dp"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->

    <!--<android.support.design.widget.TextInputEditText-->
    <!--android:id="@+id/et_user_name"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:textSize="14sp" />-->
    <!--</android.support.design.widget.TextInputLayout>-->
    <!--<TextView-->
    <!--android:id="@+id/tx_car_category"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginBottom="14dp"-->
    <!--android:layout_marginLeft="25dp"-->
    <!--android:layout_marginStart="25dp"-->
    <!--android:text="@string/car_category" />-->

    <!--<Spinner-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:id="@+id/car_category"-->
    <!--android:layout_marginRight="25dp"-->
    <!--android:layout_marginLeft="25dp"-->
    <!--/>-->
    <!--<android.support.design.widget.TextInputLayout-->
    <!--android:id="@+id/et_car_category_layout"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginRight="25dp"-->
    <!--android:layout_marginLeft="25dp">-->

    <!--<android.support.design.widget.TextInputEditText-->
    <!--android:id="@+id/et_car_category"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:textSize="14sp" />-->
    <!--</android.support.design.widget.TextInputLayout>-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save_button"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/save" />
</LinearLayout>