<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:id="@+id/bottom_sheet_parent"
    android:background="@android:color/transparent">

    <RelativeLayout

        android:id="@+id/custom_dialog_layout_design_user_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/genderpopup"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginTop="10dp">

        <!--<ImageView-->
        <!--android:layout_width="60dp"-->
        <!--android:layout_height="30dp"-->
        <!--android:id="@+id/camera_image"-->
        <!--android:background="#FAFAFA"-->
        <!--android:layout_marginLeft="20dp"-->
        <!--android:layout_marginStart="20dp"-->
        <!--android:layout_marginTop="15dp"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:src="@drawable/camera"-->
        <!--android:layout_alignParentStart="true" />-->


        <TextView
            style="@style/NunitoBlackLight"
            android:id="@+id/camera_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/Camera"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/textColor"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="31dp"
            android:layout_marginRight="25dp"
            android:layout_below="@+id/camera_title"
            android:background="@color/border_color" />

        <!--<ImageView-->
        <!--android:layout_width="60dp"-->
        <!--android:layout_height="30dp"-->
        <!--android:id="@+id/gallery_icon"-->
        <!--android:layout_marginBottom="15dp"-->
        <!--android:background="#FAFAFA"-->
        <!--android:layout_alignTop="@+id/gallery_title"-->
        <!--android:layout_alignLeft="@+id/camera_image"-->
        <!--android:src="@drawable/gallery"-->
        <!--android:layout_alignStart="@+id/camera_image" />-->


        <TextView
            style="@style/NunitoBlackLight"
            android:id="@+id/gallery_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignLeft="@+id/camera_title"
            android:layout_alignStart="@+id/camera_title"
            android:layout_below="@+id/camera_title"
            android:gravity="center"
            android:text="@string/gallery"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/textColor"
            android:textSize="14sp" />

        <!--<View-->
        <!--android:id="@+id/view_line"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:layout_below="@+id/gallery_title"-->
        <!--android:background="@color/Edittxt_lineclr" />-->
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/cance_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/genderpopup"
        android:layout_below="@+id/view_line">

        <TextView
            style="@style/NunitoBlackLight"
            android:id="@+id/cancel_txt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/gallery_title"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/colorred"
            android:textSize="14sp" />
    </LinearLayout>


    <!--<View-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="1dp"-->
    <!--android:layout_marginRight="10dp"-->
    <!--android:layout_marginLeft="10dp"-->
    <!--android:layout_below="@+id/cancel_txt"-->
    <!--android:background="@color/Edittxt_lineclr" />-->

</LinearLayout>