<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        >
        <ImageView
            android:id="@+id/sigin_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tx_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:text="@string/email" />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/et_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:id="@+id/tx_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:text="@string/password" />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/et_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>
        <!--<TextView-->
            <!--android:id="@+id/tx_username"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="14dp"-->
            <!--android:layout_marginLeft="25dp"-->
            <!--android:layout_marginStart="25dp"-->
            <!--android:text="@string/username" />-->
        <!--<android.support.design.widget.TextInputLayout-->
            <!--android:id="@+id/et_username_layout"-->
            <!--android:layout_marginRight="25dp"-->
            <!--android:layout_marginLeft="25dp"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->

            <!--<android.support.design.widget.TextInputEditText-->
                <!--android:id="@+id/et_user_name"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textSize="14sp" />-->
        <!--</android.support.design.widget.TextInputLayout>-->
        <!--<TextView-->
            <!--android:id="@+id/tx_car_category"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="14dp"-->
            <!--android:layout_marginLeft="25dp"-->
            <!--android:layout_marginStart="25dp"-->
            <!--android:text="@string/car_category" />-->

        <!--<Spinner-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/car_category"-->
            <!--android:layout_marginRight="25dp"-->
            <!--android:layout_marginLeft="25dp"-->
            <!--/>-->
        <!--<android.support.design.widget.TextInputLayout-->
        <!--android:id="@+id/et_car_category_layout"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginRight="25dp"-->
        <!--android:layout_marginLeft="25dp">-->

        <!--<android.support.design.widget.TextInputEditText-->
        <!--android:id="@+id/et_car_category"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textSize="14sp" />-->
        <!--</android.support.design.widget.TextInputLayout>-->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sign_in_button"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="Login" />

        <TextView
            android:id="@+id/tx_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="14dp"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:text="@string/forget_password"
            android:textSize="18sp" />

    </LinearLayout>
    <TextView
        android:id="@+id/dont_have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/dont_have_account"
        android:textSize="12sp"
        android:textColorHighlight="@color/white"
        android:visibility="visible"
        android:layout_marginBottom="15dp"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>